
2009-04-23  Christophe Romain <christophe.romain@process-one.net>

	* src/mod_pubsub/mod_pubsub.erl: improve send last published items
	(not spawned as much) and allow to send last PEP items of our offline
	contacts if configured for (fix discussion issue on standars ML)

2009-04-22  Badlop  <badlop@process-one.net>

	* src/ejabberd.cfg.example: Fix English typos. Fix line length:
	max 80 characters per line. Remove trailing blankspaces. Added
	markers for Vim fold, you may want to add to $HOME/.vimrc this
	line: set modeline
	* src/ejabberdctl.cfg.example: Likewise

	* src/mod_muc/mod_muc.erl: Limit number of characters in Room ID,
	Name and Description (EJAB-899)
	* src/mod_muc/mod_muc_room.erl: Likewise
	* doc/guide.tex: Likewise
	* doc/guide.html: Likewise

	* src/cyrsasl.erl: Change API of check_password: pass a function
	to generate the digest (thanks to Graham Whitted)(EJAB-863)
	* src/cyrsasl_anonymous.erl: Likewise
	* src/cyrsasl_digest.erl: Likewise
	* src/cyrsasl_plain.erl: Likewise
	* src/ejabberd_auth.erl: Likewise
	* src/ejabberd_auth_anonymous.erl: Likewise
	* src/ejabberd_auth_external.erl: Likewise
	* src/ejabberd_auth_internal.erl: Likewise
	* src/ejabberd_auth_ldap.erl: Likewise
	* src/ejabberd_auth_odbc.erl: Likewise
	* src/ejabberd_auth_pam.erl: Likewise
	* src/ejabberd_c2s.erl: Likewise

	* src/ejabberd_c2s.erl: Fix for SASL Anonymous connections not
	stored or purged (thanks to Andy Skelton)(EJAB-912)

	* src/ejabberd_c2s.erl: Fix for SASL Anonymous connections not
	stored or purged (thanks to Andy Skelton)(EJAB-912)

	* src/mod_shared_roster.erl: Support in API to add 'all' as member
	of a group (thanks to Martin Langhoff)(EJAB-916)

2009-04-17  Badlop  <badlop@process-one.net>

	* doc/guide.tex: Document new ejabberdctl option. New section that
	documents AccessCommands. (EJAB-910)
	* doc/guide.html: Likewise

	* src/ejabberd_ctl.erl: New option to require auth in ejabberdctl
	and restrict what commands and arguments can execute (EJAB-910)